# scrobble-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  scrobble-wrapper.sh
.claude/commands/: scrobble.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
claude-code/: scrobble.md
scrobble_cli/: config.py  discogs.py  lastfm.py  main.py  matching.py  timestamps.py
