[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrobble-cli"
version = "0.1.0"
description = "Interactive CLI for manually scrobbling albums (vinyl-friendly) to Last.fm"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "platformdirs>=4.2.2",
  "questionary>=2.0.1",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "typer>=0.15.1",
]

[project.scripts]
scrobble = "scrobble_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrobble_cli*"]
